--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitnium</title>
+    <link href="./images/logos/Group 3 - Copy.png" rel="shortcut icon" />
     <meta name="description" content="Bitnium is the world's leading multi-blockchain token on Ethereum, Polygon, Arbitrum, Binance, Optimism, and Base networks. Secure, trade, and leverage decentralized finance (DeFi) with Bitnium." />
 <meta name="keywords" content="Bitnium, ERC20, Ethereum, Blockchain Token, DeFi, Cryptocurrency, Trade, Buy Bitnium, Secure Wallet, Blockchain Integration" />
 <meta name="robots" content="index, follow" />
@@ -609,7 +610,7 @@ if (y == 2) {
             <div class="footer-links-and-icons-6">
                 <div class="footer-links-7">
                     <a class="footer-links-7__link-8" href="#">BTNM Token Info | </a>
-                    <a class="footer-links-7__link-8" href="#">Explorer | </a>
+                    <a class="footer-links-7__link-8" target="_blank" href="https://etherscan.io/token/0x468156a1187cf4cd8f009a59772f96a5287d1cc0">Explorer | </a>
                     <a class="footer-links-7__link-8" href="#">log</a>
                 </div>
                 <div class="footer-social-icons-9">
@@ -624,7 +625,7 @@ if (y == 2) {
             </div>
 
             <div class="footer-copyright-11">
-                <p>Copyright © 2023. All Rights Reserved Bitnium.
+                <p>Copyright © 2024. All Rights Reserved Bitnium.
                     <a class="footer-copyright-11__link-12" href="#">Terms of Service</a> | <a
                         class="footer-copyright-11__link-12" href="#">Privacy Policy</a>
                 </p>
